--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9091
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
-
+spring.thymeleaf.encoding=utf-8
 
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
