--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = root
+
+#生产密码key
+crypt.key =ZQALqX3L0vUtGnHtIEyB
